<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.skytasul</groupId>
	<artifactId>beautyquests-parent</artifactId>
	<version>0.19.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>beautyquests</name>
	<url>https://github.com/SkytAsul/BeautyQuests/</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<build.number>unknown</build.number>
		<human.version>0.19.0</human.version>
	</properties>

	<repositories>
		<repository>
			<id>codemc-nms</id>
			<url>https://repo.codemc.org/repository/nms/</url>
		</repository>
	</repositories>

	<modules>
		<module>core</module>
		<module>v1_9_R1</module>
		<module>v1_9_R2</module>
		<module>v1_10_R1</module>
		<module>v1_11_R1</module>
		<module>v1_12_R1</module>
		<module>v1_13_R2</module>
		<module>v1_14_R1</module>
		<module>v1_15_R1</module>
		<module>v1_16_R1</module>
		<module>v1_16_R2</module>
		<module>v1_16_R3</module>
		<module>v1_17_R1</module>
		<module>dist</module>
	</modules>
</project>